--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
   },
   "dependencies": {
     "express": "^4.15.2",
-    "isomorphic-fetch": "^2.2.1"
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
