--- a/package.json
+++ b/package.json
@@ -81,8 +81,12 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "isomorphic-fetch": "^2.2.1",
+    "mongoose": "^4.9.3",
+    "passport": "^0.3.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
