--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "isomorphic-fetch": "^2.2.1",
     "mongoose": "^4.9.3",
     "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
